# primitives

./: .coveragerc  .cruft.json  .flake8  .importlinter  404.html  README.md  index.html  mkdocs.yml  package.json  pyproject.toml  pytest.ini  release.config.js  sitemap.xml  tox.ini
.github/workflows/: pull_request.yml
async_context/: index.html
awaitable/: index.html
callable/: index.html
changelog/: index.html
class/: index.html
docs/: async_context.md  awaitable.md  callable.md  changelog.md  class.md  index.md  installation.md  instance.md
installation/: index.html
instance/: index.html
search/: search_index.json
src/_primitives/: argument.py  async_context.py  awaitable.py  callable.py  cls.py  exceptions.py  func.py  ignore.py  instance.py
src/primitives/: __init__.py  exceptions.py
tests/: conftest.py  test_async_context.py  test_awaitable.py  test_callable.py  test_class.py  test_func.py  test_instance.py
tests/helpers/: configuration.py
