[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.poetry]
authors = ["Artem Malyshev <proofit404@gmail.com>"]
classifiers = [
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
description = "Fake objects designed with OOP in mind."
documentation = "https://proofit404.github.io/primitives"
homepage = "https://pypi.org/project/primitives"
license = "BSD-2-Clause"
name = "primitives"
packages = [
    { include = "_primitives", from = "src" },
    { include = "primitives", from = "src" },
]
readme = "docs/index.md"
repository = "https://github.com/proofit404/primitives"
version = "1.4.0"

[tool.poetry.dependencies]
python = "~3.6 || ~3.7 || ~3.8 || ~3.9"

[tool.poetry.urls]
Changelog = "https://proofit404.github.io/primitives/changelog"
Issues = "https://github.com/proofit404/primitives/issues"
Twitter = "https://twitter.com/proofit404"
